@@ -30,6 +30,8 @@ cod-tools (unreleased)
         their atomic numbers.
     - COD::CIF::DDL::DDLm::Validate:
       - replaced '\d' with '[0-9]' in several regular expressions.
+    - COD::ErrorHandler:
+      - Perl capture variable outside conditional statement.
 
 cod-tools (3.0.1)
 
